# namagen

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js  package-lock.json  package.json
pkg/: README.md  namagen.d.ts  namagen.js  namagen_bg.wasm  namagen_bg.wasm.d.ts  package.json
src/: .env  gen_mamobibu_name.rs  gen_saurian_name.rs  gen_simple_name.rs  gen_simple_syllable.rs  gen_syllabic_name.rs  gen_syllable_based_name.rs  generate_simple_syllable.rs  generate_syllable_based_name.rs  get_gemmanite_alphabet.rs  get_saurian_alphabet.rs  lib.rs  main.rs  mamobibu.rs  server.ts  test.rs  trans_to_basic_latin.rs
src/controllers/: documentationController.ts  generatorController.ts
src/routes/: documentation.ts  generator.ts  index.ts
testproj/: Cargo.toml
