[package]
name = "namagen"
authors = ["Kyle Beechly <contact@kaBeech.com>"]
description = "A fantasy name generator for constructed languages"
license = "MIT"
repository = "https://github.com/Far-Reach-Co/namagen"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'